<resources>
    <string name="app_name">AutoSilent</string>


    <string name="bCreate">CREATE</string>
    <string name="bView">VIEW</string>
    <string name="bExit">EXIT</string>
    <string name="tvStart">START TIME</string>
    <string name="tvEnd">END TIME</string>
    <string name="tvName">NAME</string>
    <string name="eHint">Type A Name</string>
    <string name="bCancel">CANCEL</string>
    <string name="bSave">SAVE</string>
    <string name="lMenu">MENU</string>
    <string name="lViewData">VIEW TIME</string>
    <string name="lCreateTime">TIME</string>
    <string name="bTime">TIME</string>
    <string name="bGps">LOCATION</string>
    <string name="lCreate">CREATE</string>
    <string name="tvGPS">LOCATION</string>
    <string name="eHintGPS">Select Location</string>
    <string name="bSet">SET</string>
    <string name="lCreateGps">LOCATION</string>
    <string name="lLocation">MAP</string>
    <string name="tvRadius">RADIUS</string>
    <string name="eHintRadius">ENTER RADIUS IN METERS</string>
    <string name="lViewGps">VIEW LOCATION</string>
    <string name="lView">VIEW</string>
    <string name="lEditGps">VIEW LOCATION</string>
    <string name="bUpdate">UPDATE</string>
    <string name="bDelete">DELETE</string>
    <string name="tvRep">REPEAT</string>
    <string name="lEditTime">EDIT TIME</string>
    <string name="title_activity_maps">Map</string>



    //Geofencing Shit
    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>




</resources>


