<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tvName"
                android:textSize="20dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eName"
                android:hint="@string/eHint"
                android:singleLine="true"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvStart"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:id="@+id/tvStart"
                />
            <TimePicker
                android:id="@+id/tpStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvEnd"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:id="@+id/tvEnd"
                />
            <TimePicker
                android:id="@+id/tpEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvRep"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:id="@+id/tvRep"
                />

            <CheckBox
                android:id="@+id/cbSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SUNDAY"
                />

            <CheckBox
                android:id="@+id/cbMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MONDAY" />

            <CheckBox
                android:id="@+id/cbTue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TUESDAY" />

            <CheckBox
                android:id="@+id/cbWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WEDNESDAY" />

            <CheckBox
                android:id="@+id/cbThu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="THURSDAY" />

            <CheckBox
                android:id="@+id/cbFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FRIDAY" />

            <CheckBox
                android:id="@+id/cbSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SATURDAY" />

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:weightSum="100"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:text="@string/bSave"
            android:textSize="20dp"
            android:id="@+id/bSave"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_gravity="center"
            android:text="@string/bCancel"
            android:textSize="20dp"
            android:id="@+id/bCancel"
            />
    </LinearLayout>
</LinearLayout>